# LaserBoard

./: .gitignore  Cargo.toml  README.md
captures/: mock_k320_traffic.txt
docs/: hardware_status_report.md  mock_device_data.md  parallel_work_plan.md  project_context.md  stream_b_summary.md
scripts/: analyze_packets.sh  capture_traffic.sh  identify_keyboard.sh  setup.sh
src/: device_scanner.rs  errors.rs  hid_protocol.rs  keyboard.rs  lib.rs  main.rs
